# env-manager

./: readme.md
docs/: 原理说明.md  操作手册.md
env-manager-gui/: package.json  pnpm-lock.yaml
env-manager-gui/src/: App.vue  main.ts
env-manager-gui/src-tauri/: Cargo.toml  tauri.conf.json
env-manager-gui/src-tauri/src/: init.rs  main.rs  path_manager.rs
env-manager-gui/src-tauri/tests/: envt.rs
env-manager-gui/src/components/: LaManager.vue
sample/: Cargo.toml
sample/src/: main.rs
